--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Exo+2:ital,wght@1,900&family=Material+Icons&display=swap"
       rel="stylesheet"
     />
+
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
