--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/icons/favicon-16x16.png" />
-    <link rel="manifest" href="./img/icons/site.webmanifest" />
-    <link rel="mask-icon" href="./img/icons/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#dfdfdf" />
-    <meta name="theme-color" content="#dfdfdf" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/icons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/icons/favicon-16x16.png" />
+  <link rel="manifest" href="./img/icons/site.webmanifest" />
+  <link rel="mask-icon" href="./img/icons/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#dfdfdf" />
+  <meta name="theme-color" content="#dfdfdf" />
 
-    <link rel="icon" href="./favicon.ico" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Exo+2:ital,wght@1,900&family=Material+Icons&display=swap"
-      rel="stylesheet"
-    />
+  <link rel="icon" href="./favicon.ico" />
 
-    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
-        enable it to continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+  <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+      Please
+      enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
