--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
   <link rel="manifest" href="./img/icons/site.webmanifest" />
   <link rel="mask-icon" href="./img/icons/safari-pinned-tab.svg" color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#dfdfdf" />
-  <meta name="theme-color" content="#3d3d3d" media="(prefers-color-scheme: dark)" />
-  <meta name="theme-color" content="#dfdfdf" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#dfdfdf" />
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
